I don't know.  WIP.

--- a/AUTHORS
+++ b/AUTHORS
@@ -4422,6 +4422,7 @@ Jared Rittle		<jrittle[AT]cisco.com>
 Jason Cohen		<j.cohen[AT]f5.com>
 Jason Cohen		<kryojenik2[AT]gmail.com>
 Jason Heimann		<jheimann[AT]pertino.com>
+Jason Parker		<north[AT]ntbox.com>
 Jason Uher		<jason.uher[AT]jhuapl.edu>
 Jason Zhekov		<jasssonpet[AT]gmail.com>
 Javier Cardona		<jcardona[AT]fb.com>
@@ -5032,6 +5033,7 @@ database64128		<free122448[AT]hotmail.com>
 dennisschagt		<dennisschagt[AT]gmail.com>
 eason wei		<sharkhw[AT]huawei.com>
 eckart haug		<wireshark[AT]syntacs.com>
+elexis			<elexis1[AT]users.noreply.github.com>
 ferst			<matheus.ferst[AT]gmail.com>
 frst			<frst[AT]LT-FD3L2F3>
 heinrich5991		<heinrich5991[AT]gmail.com>
